fixed yaml error for build

--- a/src/contact.html
+++ b/src/contact.html
@@ -3,8 +3,6 @@ layout: "layouts/simple-page.njk"
 Title: Contact Us
 pageHeading: "Contact Us"
 description: "Contact us today for your next project"
-googleMap:
-"https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d377643.1448643036!2d-71.25046756407667!3d42.31400891969002!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89e3652d0d3d311b%3A0x787cbf240162e8a0!2sBoston%2C%20MA!5e0!3m2!1sen!2sus!4v1587934865211!5m2!1sen!2sus"
 ---
 
 <div class="contact-area sp">
@@ -57,5 +55,6 @@ googleMap:
     </div>
 </div>
 <div class="google-map">
-    <iframe src="{{ googleMap }}"></iframe>
+    <iframe
+        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d377643.1448643036!2d-71.25046756407667!3d42.31400891969002!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89e3652d0d3d311b%3A0x787cbf240162e8a0!2sBoston%2C%20MA!5e0!3m2!1sen!2sus!4v1587934865211!5m2!1sen!2sus"></iframe>
 </div>
