--- a/src/contact.html
+++ b/src/contact.html
@@ -31,19 +31,19 @@ description: "Contact us today for your next project"
                 </div>
             </div>
             <div class="col-md-7">
-                <form action="#" class="contact-form">
+                <form action="#" name="contact-page" netlify class="contact-form">
                     <div class="row">
                         <div class="col-lg-6">
-                            <input type="text" placeholder="Name" />
+                            <input name="Name" type="text" placeholder="Name" />
                         </div>
                         <div class="col-lg-6">
-                            <input type="email" placeholder="Email" />
+                            <input name="Email" type="email" placeholder="Email" />
                         </div>
                         <div class="col-lg-12">
-                            <input type="text" placeholder="Subject" />
+                            <input name="Subject" type="text" placeholder="Subject" />
                         </div>
                         <div class="col-lg-12">
-                            <textarea placeholder="Message"></textarea>
+                            <textarea name="Message" placeholder="Message"></textarea>
                         </div>
                         <div class="col-lg-12">
                             <input class="button" type="submit" value="Send Message" />
